db2-roks.yaml

apiVersion: v1
kind: Service
metadata:
  name: ${DB2_NAME}-ci
spec:
  type: ClusterIP
  selector:
    app: ${DB2_NAME}
  ports:
    - name: ${DB2_NAME}-http
      protocol: TCP
      port: 50000
      targetPort: 50000
    - name: ${DB2_NAME}-https
      protocol: TCP
      port: 50001
      targetPort: 50001

---

apiVersion: v1
kind: Service
metadata:
  name: ${DB2_NAME}-lb
spec:
  selector:
    app: ${DB2_NAME}
  type: LoadBalancer
  ports:
    - name: ${DB2_NAME}-http
      protocol: TCP
      port: 50000
      targetPort: 50000
    - name: ${DB2_NAME}-https
      protocol: TCP
      port: 50001
      targetPort: 50001

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${DB2_NAME}
spec:
  selector:
    matchLabels:
      app: ${DB2_NAME}
  serviceName: "${DB2_NAME}"
  replicas: 1
  template:
    metadata:
      labels:
        app: ${DB2_NAME}
    spec:
      serviceAccount: ${DB2_NAME}
      containers:
      - name: ${DB2_NAME}
        securityContext:
          privileged: true
        image: ibmcom/db2:11.5.5.1
        ports:
        - containerPort: 50000
          name: ${DB2_NAME}-http
        - containerPort: 50001
          name: ${DB2_NAME}-https
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /database
          name: db2vol
  volumeClaimTemplates:
  - metadata:
      name: db2vol
    spec:
      accessModes:
      - ReadWriteOnce
      persistentVolumeReclaimPolicy: "Delete"
      resources:
        requests:
          storage: 20Gi
      storageClassName: ibmc-block-gold
